# Apziva_projects

./: .gitlab-ci.yml  LICENSE  README.md  feature_plots.py  pcnkyhdq.part
 Ilvu3Yq9QU5xxw4J/: learning2rank.ipynb
AaAtd6V2ayxXnKKA/: Open_Source_LLMs_Getting_Started.ipynb  data.ipynb  historical_data.csv
Cryptobot/: LICENSE  pyproject.toml
Cryptobot/cryto_bot/strategies/: FreqaiExampleStrategy.py
Cryptobot/docs/: mkdocs.yml
Cryptobot/docs/docs/: index.md
Cryptobot/models/unique-id/: pair_dictionary.json
Cryptobot/models/unique-id/backtesting_predictions/: cb_btc_1759276800_prediction.feather  cb_btc_1759881600_prediction.feather  cb_btc_1761696000_prediction.feather  cb_btc_1762300800_prediction.feather  cb_btc_1763510400_prediction.feather  cb_btc_1764115200_prediction.feather  cb_eth_1759276800_prediction.feather  cb_eth_1759881600_prediction.feather  cb_eth_1761696000_prediction.feather  cb_eth_1763510400_prediction.feather
Cryptobot/models/unique-id/sub-train-BTC_1771219982/: cb_btc_1771219982_metadata.json
Cryptobot/models/unique-id/sub-train-ETH_1771219980/: cb_eth_1771219980_model.joblib
Cryptobot/models/unique-id/sub-train-ETH_1771219983/: cb_eth_1771219983_metadata.json  cb_eth_1771219983_model.joblib  cb_eth_1771219983_trained_dates_df.pkl
Cryptobot/notebooks/: freqtrade_commands.ipynb
MonReader/: ViTorc.ipynb  project4.ipynb
NSKrVy28dyqgdvl9/: README.md  ViTipynb.ipynb  project4.ipynb
P3/: C.ipynb
Potential Talent/: learning2rank.ipynb
Project4/: project4.ipynb
Project_1/: Apziva_Project1.ipynb  README.md
mybot/: Makefile  (+1 more)
(+28 files in other folders)
